// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`grid should render 1 children 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="position: relative; visibility: hidden; width: 100px; height: 40px; pointer-events: auto;"
    >
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          0 / 0
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`grid should render 4x4 children 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="position: relative; visibility: hidden; width: 400px; height: 160px; pointer-events: auto;"
    >
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          0 / 0
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 100px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          0 / 1
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 200px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          0 / 2
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 40px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          1 / 0
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 40px; left: 100px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          1 / 1
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 40px; left: 200px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          1 / 2
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 80px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          2 / 0
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 80px; left: 100px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          2 / 1
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 80px; left: 200px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          2 / 2
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`grid should render 100x100 children 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="position: relative; visibility: hidden; width: 10000px; height: 4000px; pointer-events: auto;"
    >
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          0 / 0
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 100px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          0 / 1
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 200px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          0 / 2
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 40px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          1 / 0
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 40px; left: 100px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          1 / 1
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 40px; left: 200px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          1 / 2
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 80px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          2 / 0
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 80px; left: 100px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          2 / 1
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 80px; left: 200px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          2 / 2
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`grid should render 1000x1000 children 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="position: relative; visibility: hidden; width: 100000px; height: 40000px; pointer-events: auto;"
    >
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          0 / 0
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 100px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          0 / 1
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 200px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          0 / 2
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 40px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          1 / 0
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 40px; left: 100px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          1 / 1
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 40px; left: 200px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          1 / 2
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 80px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          2 / 0
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 80px; left: 100px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          2 / 1
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 80px; left: 200px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          2 / 2
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`grid should render 10000x10000 children 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="position: relative; visibility: hidden; width: 1000000px; height: 400000px; pointer-events: auto;"
    >
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          0 / 0
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 100px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          0 / 1
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 200px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          0 / 2
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 40px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          1 / 0
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 40px; left: 100px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          1 / 1
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 40px; left: 200px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          1 / 2
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 80px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          2 / 0
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 80px; left: 100px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          2 / 1
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 80px; left: 200px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          2 / 2
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`grid should render component 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="position: relative; visibility: hidden; width: 10000px; height: 4000px; pointer-events: auto;"
    >
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          0 / 0
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 100px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          0 / 1
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 200px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          0 / 2
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 40px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          1 / 0
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 40px; left: 100px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          1 / 1
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 40px; left: 200px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          1 / 2
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 80px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          2 / 0
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 80px; left: 100px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          2 / 1
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 80px; left: 200px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          2 / 2
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`grid should render fragments 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="position: relative; visibility: hidden; width: 100px; height: 80px; pointer-events: auto;"
    >
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          fragment
        </div>
        <div>
          fragment
        </div>
        <div>
          fragment
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 40px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          fragment
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`grid should render non elements 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="position: relative; visibility: hidden; width: 100px; height: 240px; pointer-events: auto;"
    >
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        string
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 40px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      />
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 80px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`grid should render with given width / height 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto; contain: strict; width: 100px; height: 100px;"
  >
    <div
      style="position: relative; visibility: hidden; width: 400px; height: 160px; pointer-events: auto;"
    >
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          0 / 0
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 100px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          0 / 1
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 200px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          0 / 2
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 40px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          1 / 0
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 40px; left: 100px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          1 / 1
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 40px; left: 200px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          1 / 2
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 80px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          2 / 0
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 80px; left: 100px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          2 / 1
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 80px; left: 200px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          2 / 2
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should pass attributes to element 1`] = `
<DocumentFragment>
  <div
    aria-label="test"
    class="class"
    id="id"
    role="list"
    style="overflow: auto; contain: strict; width: 100%; height: 100%; background: red;"
    tabindex="0"
  >
    <div
      style="position: relative; visibility: hidden; width: 10000px; height: 4000px; pointer-events: auto;"
    >
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          0 / 0
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 100px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          0 / 1
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 200px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          0 / 2
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 40px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          1 / 0
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 40px; left: 100px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          1 / 1
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 40px; left: 200px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          1 / 2
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 80px; left: 0px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          2 / 0
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 80px; left: 100px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          2 / 1
        </div>
      </div>
      <div
        style="display: grid; margin: 0px; padding: 0px; position: absolute; top: 80px; left: 200px; visibility: hidden; min-height: 40px; min-width: 100px;"
      >
        <div>
          2 / 2
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
